m04a02summean-handout/grading/2024-09-23-17-33-08/compile.err
SumMean.java:20: error: cannot find symbol
        if (n /= 0) {
            ^
  symbol:   variable n
  location: class SumMean
1 error
